--- a/roles/satnogs-radio/tasks/main.yml
+++ b/roles/satnogs-radio/tasks/main.yml
@@ -48,12 +48,18 @@
     state: 'present'
   become: true
   with_items: '{{ satnogs_radio_blacklist_modules }}'
+  ignore_errors: true
+- name: Check if list of kernel builtin modules exists
+  stat:
+    path: '/lib/modules/{{ ansible_kernel }}/modules.builtin'
+  register: modules_builtin
 - name: Unload SDR modules
   modprobe:
     name: '{{ item }}'
     state: 'absent'
-  become: true
-  with_items: '{{ satnogs_radio_blacklist_modules }}'
+    become: true
+    with_items: '{{ satnogs_radio_blacklist_modules }}'
+  when: modules_builtin.stat.exists
 - name: Download UHD images
   command: '/usr/bin/uhd_images_downloader'
   args:
