satnogs-client: Add new python3-h5py dependency
Signed-off-by: Fabian P. Schmidt <kerel@mailbox.org>

--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -18,6 +18,7 @@ satnogs_client_packages:
   - name: 'python3-gps'
   - name: 'python3-decorator'
   - name: 'python3-libhamlib2'
+  - name: 'python3-h5py'
 satnogs_client_url_unstable: 'git+https://gitlab.com/librespacefoundation/satnogs/satnogs-client.git@master'
 satnogs_client_state_dir: '/tmp/.satnogs'
 satnogs_client_settings:
