--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -2,21 +2,33 @@
 satnogs_client_name: 'satnogs-client'
 satnogs_client_user: 'satnogs'
 satnogs_client_pypi:
-  - name: 'python-dotenv==0.10.3'
-  - name: 'validators==0.14.1'
-  - name: 'sentry-sdk==0.14.1'
+  - name: 'APScheduler==3.6.3'
+  - name: 'certifi==2020.6.20'
+  - name: 'chardet==3.0.4'
+  - name: 'cycler==0.10.0'
+  - name: 'decorator==4.4.2'
+  - name: 'ephem==3.7.7.1'
+  - name: 'gps==3.19'
+  - name: 'h5py==2.10.0'
+  - name: 'idna==2.10'
+  - name: 'kiwisolver==1.2.0'
+  - name: 'matplotlib==3.3.2'
+  - name: 'numpy==1.19.2'
+  - name: 'Pillow==7.2.0'
+  - name: 'pyparsing==2.4.7'
+  - name: 'python-dateutil==2.8.1'
+  - name: 'python-dotenv==0.14.0'
+  - name: 'pytz==2020.1'
+  - name: 'requests==2.24.0'
+  - name: 'sentry-sdk==0.18.0'
+  - name: 'six==1.15.0'
+  - name: 'tzlocal==2.1'
+  - name: 'urllib3==1.25.10'
+  - name: 'validators==0.18.1'
 satnogs_client_packages:
   - name: 'git'
   - name: 'virtualenv'
-  - name: 'python3-apscheduler'
-  - name: 'python3-requests'
-  - name: 'python3-dateutil'
-  - name: 'python3-ephem'
-  - name: 'python3-tz'
-  - name: 'python3-matplotlib'
-  - name: 'python3-numpy'
   - name: 'python3-gps'
-  - name: 'python3-decorator'
   - name: 'python3-libhamlib2'
   - name: 'python3-h5py'
 satnogs_client_url_unstable: 'git+https://gitlab.com/librespacefoundation/satnogs/satnogs-client.git@master'
