--- a/roles/satnogs-setup/vars/main.yml
+++ b/roles/satnogs-setup/vars/main.yml
@@ -13,6 +13,7 @@ satnogs_setup_packages:
   - name: 'virtualenv'
   - name: 'python3-apt'
   - name: 'python3-psutil'
+  - name: 'dialog'
 satnogs_setup_satnogs_config_pypi:
   - name: 'python-dotenv==0.14.0'
   - name: 'pythondialog==3.5.1'
