satnogs-client: Install 'libhdf5-103' package (fixes #86)
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -27,6 +27,7 @@ satnogs_client_pypi:
 satnogs_client_packages:
   - name: 'git'
   - name: 'virtualenv'
+  - name: 'libhdf5-103'
   - name: 'python3-gps'
   - name: 'python3-libhamlib2'
   - name: 'python3-numpy'
