--- a/roles/satnogs-radio/defaults/main.yml
+++ b/roles/satnogs-radio/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
 experimental: false
-satnogs_radio_flowgraphs_version: '1.2.2-1'
+satnogs_radio_flowgraphs_version: '{{ default_satnogs_radio_flowgraphs_version }}'
