footlose: Bind mount '/dev/usb' to access USB devices
Do not bind mount kernel modules and 'modprobe' but instead mount
the '/dev/usb' path. Also, skip unloading RTL-SDR modules and rely on
'librtlsdr' to detach the module on initialization.

Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/footloose.yaml
+++ b/footloose.yaml
@@ -12,8 +12,5 @@ machines:
         - containerPort: 22
       volumes:
         - type: bind
-          source: /sbin/modprobe
-          destination: /sbin/modprobe
-        - type: bind
-          source: /lib/modules/
-          destination: /lib/modules/
+          source: /dev/bus/usb
+          destination: /dev/bus/usb
