--- a/production.dist/inventory/host_vars/satnogs/main.yml
+++ b/production.dist/inventory/host_vars/satnogs/main.yml
@@ -2,113 +2,145 @@
 ###
 # SatNOGS client Ansible configuration example
 #
-# Note: These are NOT the default values!
-
 
 #
-# Common configuration
-# apt_repository: 'deb http://download.opensuse.org/repositories/home:/librespace:/satnogs/Raspbian_10 ./'
-# apt_key_url: 'http://download.opensuse.org/repositories/home:/librespace:/satnogs/Raspbian_10/Release.key'
-# apt_key_id: '8BD3901736A40B6C'
-# experimental: true
-
-
-#
-# SatNOGS setup script configuration
-#
-# satnogs_setup_ansible_url: 'https://gitlab.com/librespacefoundation/satnogs/satnogs-client-ansible.git'
-# satnogs_setup_ansible_branch: 'stable'
-# satnogs_setup_satnogs_config_url: 'git+https://gitlab.com/librespacefoundation/satnogs/satnogs-config.git@master'
-# satnogs_setup_satnogs_config_version: '0.1.2'
-# satnogs_setup_release_upgrade_enabled: true
-
-#
-# SatNOGS client package configuration
-#
-# satnogs_client_url: 'git+https://gitlab.com/librespacefoundation/satnogs/satnogs-client.git@0'
-# satnogs_client_version: '0.9'
-
-
-#
-# SatNOGS client configuration
+# Basic configuration
 #
 satnogs_api_token: '0123456789abcdef0123456789abcdef01234567'
-satnogs_network_api_url: 'https://network.satnogs.org/api/'
-satnogs_rx_device: 'rtlsdr'
+satnogs_soapy_rx_device: 'driver=rtlsdr'
+satnogs_antenna: 'RX'
+satnogs_rx_samp_rate: '2.048e6'
 satnogs_station_elev: '100'
 satnogs_station_id: '9999'
 satnogs_station_lat: '37.971'
 satnogs_station_lon: '23.725'
 
-# satnogs_pre_observation_script: Null
-# satnogs_post_observation_script:  Null
-# satnogs_app_path: '/tmp/.satnogs'
-# satnogs_output_path: '/tmp/.satnogs/data'
-# satnogs_complete_output_path: '/tmp/.satnogs/data/complete'
-# satnogs_incomplete_output_path: '/tmp/.satnogs/data/incomplete'
-# satnogs_remove_raw_files: 'True'
-# satnogs_verify_ssl: 'True'
-# satnogs_sqlite_url: 'sqlite:///jobs.sqlite'
+###
+# Default configuration values
+#
 
-# satnogs_rot_ip: '127.0.0.1'
-# satnogs_rot_port: '4533'
+#
+# SatNOGS client configuration
+#
+# Network settings
+#
+# satnogs_api_token: null
+# satnogs_station_elev: null
+# satnogs_station_id: null
+# satnogs_station_lat: null
+# satnogs_station_lon: null
+# satnogs_network_api_url: 'https://network.satnogs.org/api/'
+# satnogs_network_api_query_interval: 60
+# satnogs_network_api_post_interval: 180
+# satnogs_verify_ssl: true
+#
+# Radio settings
+#
 # satnogs_rig_ip: '127.0.0.1'
 # satnogs_rig_port: '4532'
-# satnogs_rot_threshold: '4'
-
-# satnogs_serial_port: Null
-
-# satnogs_doppler_corr_per_sec: Null
-# satnogs_lo_offset: Null
-# satnogs_ppm_error: Null
-# satnogs_if_gain: Null
-# satnogs_rf_gain: Null
-# satnogs_bb_gain: Null
-# satnogs_antenna: Null
-# satnogs_dev_args: Null
-# enable_iq_dump: 0
-# iq_dump_filename: Null
-# disable_decoded_data: 0
-
-# satnogs_soapy_rx_device: 'driver=rtlsdr'
-# satnogs_rx_samp_rate: '1e6'
-# satnogs_rx_bandwidth: '2e5'
-
-# rf_sw_cmd_off_int: Null
-# rf_sw_cmd_off_char_seq: Null
-# rf_sw_cmd_on_int: Null
-# rf_sw_cmd_on_char_seq: Null
-
-# satnogs_waterfall_autorange: True
+# satnogs_doppler_corr_per_sec: null
+# satnogs_ppm_error: null
+# satnogs_lo_offset: null
+# satnogs_gain_mode: 'Overall'
+# satnogs_rf_gain: null
+# satnogs_rx_bandwidth: null
+# satnogs_antenna: null
+# satnogs_soapy_rx_device: null
+# satnogs_rx_samp_rate: null
+# satnogs_dev_args: null
+# satnogs_stream_args: null
+# satnogs_tune_args: null
+# satnogs_other_settings: null
+# satnogs_dc_removal: true
+# satnogs_bb_freq: null
+# enable_iq_dump: false
+# iq_dump_filename: null
+# disable_decoded_data: false
+#
+# Rotator settings
+#
+# satnogs_rot_model: 'ROT_MODEL_DUMMY'
+# satnogs_rot_baud: '19200'
+# satnogs_rot_port: '/dev/ttyUSB0'
+# satnogs_rot_threshold: 4
+# satnogs_rot_flip: false
+# satnogs_rot_flip_angle: 75
+#
+# Waterfall settings
+#
+# satnogs_waterfall_autorange: true
 # satnogs_waterfall_min_value: -100
 # satnogs_waterfall_max_value: -50
-
-# satnogs_log_level: DEBUG
-
 #
-# SatNOGS radio configuration
+# Artifact settings
 #
-# satnogs_radio_gr_satnogs_version: '1.5.1-1'
-
+# satnogs_artifacts_enabled: false
+# satnogs_artifacts_api_url: 'https://db.satnogs.org/api/'
+# satnogs_artifacts_api_post_interval: 180
+# satnogs_artifacts_api_token: null
+#
+# Script settings
+#
+# satnogs_pre_observation_script: null
+# satnogs_post_observation_script: null
+#
+# Path settings
+#
+# satnogs_app_path: '/tmp/.satnogs'
+# satnogs_output_path: '/tmp/.satnogs/data'
+# satnogs_complete_output_path: null
+# satnogs_incomplete_output_path: '/tmp/.satnogs/data/incomplete'
+# satnogs_remove_raw_files: true
 
 #
 # Hamlib configuration
 #
+# hamlib_utils_rot_enabled: false
+# hamlib_utils_rot_opts: null
 # hamlib_utils_rig_disabled: false
 # hamlib_utils_rig_opts: '-T 127.0.0.1 -m 1'
-# hamlib_utils_rot_enabled: true
-# hamlib_utils_rot_opts: '-T 127.0.0.1 -m 1'
-
 
 #
-# SNMPD configuration
+# SNMP configuration
 #
-# snmpd_agentaddress: 'udp:0.0.0.0:161'
-# snmpd_rocommunity: 'public default'
 # snmpd_enabled: false
-
+# snmpd_agentaddress: null
+# snmpd_rocommunity: null
 
 #
-# GPSd configuration
+# GPS configuration
 #
 # gpsd_enabled: false
+
+#
+# Software configuration
+#
+# APT software settings
+#
+# experimental: false
+# apt_repository: null
+# apt_key_url: null
+# apt_key_id: null
+#
+# SatNOGS Client software settings
+#
+# satnogs_client_version: null
+# satnogs_client_url: null
+#
+# Radio software settings
+#
+# satnogs_radio_flowgraphs_version: null
+#
+# SatNOGS setup software settings
+#
+# satnogs_setup_ansible_url: null
+# satnogs_setup_ansible_branch: null
+# satnogs_setup_satnogs_config_version: null
+# satnogs_setup_satnogs_config_url: null
+
+#
+# Debug configuration
+#
+# satnogs_log_level: 'WARNING'
+# sentry_dsn: 'd50342fb75aa8f3945e2f846b77a0cdb7c7d2275'
+# sentry_enabled: false
