gitlab-ci: Run syntax check on footloose inventory as well
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,5 +16,6 @@ static_ansible:
   stage: static
   image: ${GITLAB_CI_IMAGE_ANSIBLE}
   script:
-    - ansible-playbook -i production.dist/inventory --syntax-check -vvv site.yml
+    - ansible-playbook -i production.dist/inventory/hosts --syntax-check -vvv site.yml
+    - ansible-playbook -i production.dist/inventory/footloose --syntax-check -vvv site.yml
     - ansible-lint site.yml
