--- a/roles/satnogs-setup/vars/main.yml
+++ b/roles/satnogs-setup/vars/main.yml
@@ -1,5 +1,7 @@
 ---
-satnogs_setup_ansible_url_unstable: 'https://gitlab.com/librespacefoundation/satnogs/satnogs-client-ansible.git'
+satnogs_setup_ansible_url_stable: 'https://gitlab.com/librespacefoundation/satnogs/satnogs-client-ansible.git'
+satnogs_setup_ansible_branch_stable: 'stable'
+satnogs_setup_ansible_url_unstable: '{{ satnogs_setup_ansible_url_stable }}'
 satnogs_setup_ansible_branch_unstable: 'master'
 satnogs_setup_satnogs_config_url_unstable: >-
   git+https://gitlab.com/librespacefoundation/satnogs/satnogs-config.git@master
