add file type upload options in satnogs-client-ansible
Signed-off-by: Julien Flawinne <jf.satnogs at protonmail dot com>

--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -88,3 +88,5 @@ satnogs_client_settings:
   - satnogs_log_level
   - sentry_dsn
   - sentry_enabled
+  - satnogs_upload_audio_files
+  - satnogs_upload_waterfall_files
