common: Add workaround for missing repo signing key
Fixes #94.

Signed-off-by: Fabian P. Schmidt <kerel@mailbox.org>

--- a/roles/satnogs-setup/tasks/main.yml
+++ b/roles/satnogs-setup/tasks/main.yml
@@ -162,3 +162,4 @@
       - '/usr/local/bin/satnogs-upgrade'
       - '/usr/local/share/satnogs-setup/bootstrap.sh'
       - '/usr/local/share/satnogs-setup/config.sh'
+- import_tasks: buster_workarounds.yml
