common: Add workaround for renamed Raspbian repositories (buster/bullseye)
Fixes #96.

Signed-off-by: Fabian P. Schmidt <kerel@mailbox.org>

--- a/roles/satnogs-setup/tasks/buster_workarounds.yml
+++ b/roles/satnogs-setup/tasks/buster_workarounds.yml
@@ -5,3 +5,9 @@
     url: 'http://download.opensuse.org/repositories/home:/librespace:/satnogs-unstable/Raspbian_10/Release.key'
     state: 'present'
   become: true
+- name: Add configuration file for apt to allow releaseinfo changes
+  copy:
+    src: 'etc/apt/apt.conf.d/01allow-releaseinfo-changes'
+    dest: '/etc/apt/apt.conf.d/01allow-releaseinfo-changes'
+    mode: 0755
+  become: true
