common: Add retries to apt key download
This should prevent the ansible run to fail due to intermittent network
issues when downloading the apt key from this external webserver.

Signed-off-by: Fabian P. Schmidt <kerel@mailbox.org>

--- a/roles/satnogs-setup/tasks/buster_workarounds.yml
+++ b/roles/satnogs-setup/tasks/buster_workarounds.yml
@@ -5,6 +5,9 @@
     url: 'http://download.opensuse.org/repositories/home:/librespace:/satnogs-unstable/Raspbian_10/Release.key'
     state: 'present'
   become: true
+  register: res
+  until: res is success
+  retries: 3
 - name: Add configuration file for apt to allow releaseinfo changes
   copy:
     src: 'etc/apt/apt.conf.d/01allow-releaseinfo-changes'
