Update APT cache with a handler
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -5,3 +5,10 @@
     state: 'started'
     enabled: true
   become: true
+- name: Update APT cache
+  apt:
+    update_cache: true
+  become: true
+  register: res
+  until: res is success
+  retries: 3
