satnogs-client: Install 'libhdf5-dev' to allow building of Python 'h5py' when no wheel is available
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -26,8 +26,9 @@ satnogs_client_pypi:
   - name: 'validators==0.18.1'
 satnogs_client_packages:
   - name: 'git'
+  - name: 'pkg-config'
   - name: 'virtualenv'
-  - name: 'libhdf5-103'
+  - name: 'libhdf5-dev'
   - name: 'python3-gps'
   - name: 'python3-libhamlib2'
   - name: 'python3-numpy'
