satnogs-setup: Create Ansible system-wide configuration directory
Latest versions of Ansible package do not install this directory by default.

Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-setup/tasks/main.yml
+++ b/roles/satnogs-setup/tasks/main.yml
@@ -115,6 +115,12 @@
   become: true
   tags:
     - satnogs_setup_software
+- name: Create Ansible configuration directory
+  file:
+    path: '/etc/ansible'
+    state: 'directory'
+    mode: 0755
+  become: true
 - name: Set up inventory
   copy:
     src: 'etc/ansible/hosts'
