common: Move package and APT retries into variables
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/tasks/packages.yml
+++ b/roles/common/tasks/packages.yml
@@ -7,4 +7,5 @@
   with_items: '{{ packages }}'
   register: res
   until: res is success
-  retries: 3
+  retries: '{{ package_retries }}'
+  delay: '{{ package_delay }}'
