--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -11,4 +11,5 @@
   become: true
   register: res
   until: res is success
-  retries: 3
+  retries: '{{ package_retries }}'
+  delay: '{{ package_delay }}'
