--- a/roles/common/tasks/apt.yml
+++ b/roles/common/tasks/apt.yml
@@ -13,7 +13,8 @@
   become: true
   register: res
   until: res is success
-  retries: 3
+  retries: '{{ package_retries }}'
+  delay: '{{ package_delay }}'
 - name: Install required package for APT
   package:
     name:
@@ -28,7 +29,8 @@
   become: true
   register: res
   until: res is success
-  retries: 3
+  retries: '{{ package_retries }}'
+  delay: '{{ package_delay }}'
 - name: Install repository keys
   apt_key:
     url: '{{ apt_key_url }}'
@@ -38,7 +40,8 @@
   become: true
   register: res
   until: res is success
-  retries: 3
+  retries: '{{ package_retries }}'
+  delay: '{{ package_delay }}'
   notify:
     - Update APT cache
   tags:
