--- a/roles/hamlib-utils/tasks/main.yml
+++ b/roles/hamlib-utils/tasks/main.yml
@@ -19,7 +19,8 @@
   become: true
   register: res
   until: res is success
-  retries: 3
+  retries: '{{ package_retries }}'
+  delay: '{{ package_delay }}'
   notify:
     - Restart rigctld service
     - Restart rotctld service
