--- a/roles/satnogs-setup/tasks/main.yml
+++ b/roles/satnogs-setup/tasks/main.yml
@@ -20,7 +20,8 @@
   become: true
   register: res
   until: res is success
-  retries: 3
+  retries: '{{ package_retries }}'
+  delay: '{{ package_delay }}'
   with_items: '{{ satnogs_setup_packages }}'
 - name: Install Ansible repository keys
   apt_key:
@@ -30,7 +31,8 @@
   become: true
   register: res
   until: res is success
-  retries: 3
+  retries: '{{ package_retries }}'
+  delay: '{{ package_delay }}'
 - name: Install Ansible repository
   apt_repository:
     repo: >-
@@ -42,7 +44,8 @@
   become: true
   register: res
   until: res is success
-  retries: 3
+  retries: '{{ package_retries }}'
+  delay: '{{ package_delay }}'
 - name: Install Ansible package
   package:
     name: 'ansible'
@@ -50,7 +53,8 @@
   become: true
   register: res
   until: res is success
-  retries: 3
+  retries: '{{ package_retries }}'
+  delay: '{{ package_delay }}'
 - name: Get system Python version  # noqa 306
   shell: '/usr/bin/python3 --version 2>&1 | awk ''/^Python/ { print $2 }'''
   become: true
@@ -82,7 +86,8 @@
   become: true
   register: res
   until: res is success
-  retries: 3
+  retries: '{{ package_retries }}'
+  delay: '{{ package_delay }}'
   with_items: '{{ satnogs_setup_satnogs_config_pypi }}'
 - name: Install satnogs-config
   pip:
@@ -104,7 +109,8 @@
     editable: false
     extra_args: '--no-deps'
     state: '{{ "present" if satnogs_setup_satnogs_config_url is undefined and not experimental else "forcereinstall" }}'
-  retries: 3
+  retries: '{{ package_retries }}'
+  delay: '{{ package_delay }}'
   register: res
   until: res is success
   become: true
