gpsd: Optimize installation of packages
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/gpsd/tasks/main.yml
+++ b/roles/gpsd/tasks/main.yml
@@ -1,16 +1,9 @@
 ---
-- name: Install gpsd
+- name: Install gpsd and clients
   package:
-    name: 'gpsd'
-    state: 'present'
-  become: true
-  register: res
-  until: res is success
-  retries: '{{ package_retries }}'
-  delay: '{{ package_delay }}'
-- name: Install gpsd clients
-  package:
-    name: 'gpsd-clients'
+    name:
+      - 'gpsd'
+      - 'gpsd-clients'
     state: 'present'
   become: true
   register: res
