Override system Python packages
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-setup/vars/main.yml
+++ b/roles/satnogs-setup/vars/main.yml
@@ -20,9 +20,10 @@ satnogs_setup_packages:
   - name: 'needrestart'
   - name: 'virtualenv'
   - name: 'python3-apt'
-  - name: 'python3-psutil'
   - name: 'dialog'
 satnogs_setup_satnogs_config_pypi:
+  - name: 'psutil==5.5.1'
   - name: 'python-dotenv==0.14.0'
   - name: 'pythondialog==3.5.1'
   - name: 'PyYAML==5.3.1'
+  - name: 'setuptools==50.3.2'
