--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -15,6 +15,7 @@ satnogs_client_pypi:
   - name: 'idna==2.10'
   - name: 'kiwisolver==1.3.1'
   - name: 'matplotlib==3.3.2'
+  - name: 'numpy==1.16.6'
   - name: 'Pillow==8.0.1'
   - name: 'pyparsing==2.4.7'
   - name: 'python-dateutil==2.8.1'
@@ -33,7 +34,6 @@ satnogs_client_packages:
   - name: 'libhdf5-dev'
   - name: 'python3-gps'
   - name: 'python3-libhamlib2'
-  - name: 'python3-numpy'
 satnogs_client_url_unstable: 'git+https://gitlab.com/librespacefoundation/satnogs/satnogs-client.git@master'
 satnogs_client_state_dir: '/tmp/.satnogs'
 satnogs_client_settings:
