Replace module names with FQCN (closes #111)
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -1,12 +1,12 @@
 ---
 - name: Start ZRAM service
-  service:
+  ansible.builtin.service:
     name: 'zram'
     state: 'started'
     enabled: true
   become: true
 - name: Update APT cache
-  apt:
+  ansible.builtin.apt:
     update_cache: true
   become: true
   register: res
