--- a/roles/satnogs-client/handlers/main.yml
+++ b/roles/satnogs-client/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Restart satnogs-client service
-  systemd:
+  ansible.builtin.systemd:
     daemon_reload: true
     name: 'satnogs-client'
     enabled: true
