--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: Check Ansible version
-  assert:
+  ansible.builtin.assert:
     that: ansible_version.full is version(version_minimum, '>=')
     msg: 'Detected Ansible {{ ansible_version.full }}. This role requires Ansible {{ version_minimum }} or greater.'
 - name: Check distribution
-  assert:
+  ansible.builtin.assert:
     that: dict(id=ansible_lsb.id, codename=ansible_lsb.codename) in lsb_compatibility
     msg: 'This role does not support {{ ansible_lsb.id }} {{ ansible_lsb.codename }}.'
 - import_tasks: apt.yml
