--- a/roles/satnogs-setup/tasks/buster_workarounds.yml
+++ b/roles/satnogs-setup/tasks/buster_workarounds.yml
@@ -1,6 +1,6 @@
 ---
 - name: Download Libre Space Foundation OBS Repository Signing Key
-  apt_key:
+  ansible.builtin.apt_key:
     id: '8DB3D79801FA84B51B0FDC938BD3901736A40B6C'
     url: 'http://download.opensuse.org/repositories/home:/librespace:/satnogs-unstable/Raspbian_10/Release.key'
     state: 'present'
@@ -11,14 +11,14 @@
   retries: '{{ package_retries }}'
   delay: '{{ package_delay }}'
 - name: Add configuration file for apt to allow releaseinfo changes
-  copy:
+  ansible.builtin.copy:
     src: 'etc/apt/apt.conf.d/01allow-releaseinfo-changes'
     dest: '/etc/apt/apt.conf.d/01allow-releaseinfo-changes'
     mode: 0755
   when: ansible_lsb.codename == "buster"
   become: true
 - name: Remove configutation file for APT to allow releaseinfo changes
-  file:
+  ansible.builtin.file:
     path: '/etc/apt/apt.conf.d/01allow-releaseinfo-changes'
     state: 'absent'
   when: ansible_lsb.codename == "bullseye"
