--- a/roles/snmpd/handlers/main.yml
+++ b/roles/snmpd/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
 - name: Restart snmpd service
-  service:
+  ansible.builtin.service:
     name: 'snmpd'
     enabled: '{{ snmpd_enabled | default(false) }}'
     state: '{{ "restarted" if snmpd_enabled | default(false) else "stopped" }}'
