--- a/roles/satnogs-radio/tasks/main.yml
+++ b/roles/satnogs-radio/tasks/main.yml
@@ -71,7 +71,7 @@
   with_items: '{{ satnogs_radio_blacklist_modules }}'
   when: modules_builtin.stat.exists
 - name: Download UHD images
-  command: '/usr/bin/uhd_images_downloader'
+  ansible.builtin.command: '/usr/bin/uhd_images_downloader'
   args:
     creates: '/usr/share/uhd/images/inventory.json'
   become: true
