Rename roles to remove hyphens
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/hamlib-utils.yml
+++ b/hamlib-utils.yml
@@ -1,17 +1,9 @@
 ---
-- hosts: hamlib-utils
-  roles:
-    - role: common
-      tags:
-        - common
-    - role: hamlib-utils
-      tags:
-        - hamlib-utils
 - hosts: hamlib_utils
   roles:
     - role: common
       tags:
         - common
-    - role: hamlib-utils
+    - role: hamlib_utils
       tags:
         - hamlib-utils
