--- a/satnogs-clients.yml
+++ b/satnogs-clients.yml
@@ -1,17 +1,9 @@
 ---
-- hosts: satnogs-clients
-  roles:
-    - role: common
-      tags:
-        - common
-    - role: satnogs-client
-      tags:
-        - satnogs-client
 - hosts: satnogs_clients
   roles:
     - role: common
       tags:
         - common
-    - role: satnogs-client
+    - role: satnogs_client
       tags:
         - satnogs-client
