--- a/satnogs-setups.yml
+++ b/satnogs-setups.yml
@@ -1,17 +1,9 @@
 ---
-- hosts: satnogs-setups
-  roles:
-    - role: common
-      tags:
-        - common
-    - role: satnogs-setup
-      tags:
-        - satnogs-setup
 - hosts: satnogs_setups
   roles:
     - role: common
       tags:
         - common
-    - role: satnogs-setup
+    - role: satnogs_setup
       tags:
         - satnogs-setup
