--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,10 +1,29 @@
 ---
 variables:
+  GITLAB_CI_IMAGE_ALPINE: 'alpine:3.16.0'
   GITLAB_CI_IMAGE_ANSIBLE: 'librespace/ansible:6.0.0'
+  GITLAB_CI_SIGN_OFF_EXCLUDE: '560ebadf7353fd458be7bfd2eb08546465cc1e71'
 stages:
   - static
+
+# 'static' stage
+sign_off:
+  stage: static
+  needs: []
+  image: ${GITLAB_CI_IMAGE_ALPINE}
+  before_script:
+    - apk add --no-cache git
+  script: >-
+    git log
+    --grep "^Signed-off-by: .\+<.\+\(@\| at \).\+\(\.\| dot \).\+>$"
+    --invert-grep
+    --format="Detected commit '%h' with missing or bad sign-off! Please read 'CONTRIBUTING.md'."
+    --exit-code
+    "$(rev=$(git rev-parse -q --verify "$GITLAB_CI_SIGN_OFF_EXCLUDE^{commit}") && echo "$rev..")"
+
 static_ansible:
   stage: static
+  needs: []
   image: ${GITLAB_CI_IMAGE_ANSIBLE}
   script:
     - ansible-playbook -i production.dist/inventory/hosts --syntax-check -vvv site.yml
