gitlab-ci: Lint both playbook and roles
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,4 +27,4 @@ static_ansible:
   image: ${GITLAB_CI_IMAGE_ANSIBLE}
   script:
     - ansible-playbook -i production.dist/inventory/hosts --syntax-check -vvv site.yml
-    - ansible-lint site.yml
+    - ansible-lint
